Add button on index page for go to tricks immediatly

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -19,8 +19,14 @@
             <div class="secondary-slogan">
                 Communauté de Snowboarder.
             </div>
+            <div class="actions2">
+                <a id="back-to-top" href="#blog" class="pull-right" class="btn btn-primary btn-lg back-to-top" role="button" title="Click to return on the top page"
+                   data-toggle="tooltip" data-placement="right"><span class="fa fa-chevron-down"></span></a>
+            </div>
         </section>
     </div><!-- header -->
+
+
 
 
     <div class="content-block" id="blog">
@@ -30,7 +36,7 @@
                 <a href="{{ path('trick_add') }}" class="btn btn-o btn-lg pull-right">Ajoutez une figure !</a>
                 {% endif %}
                 <div class="title-page">
-                    <h1 class="main-header">TOUT LES TRICKS</h1>
+                    <h1 class="main-header">TOUS LES TRICKS</h1>
                 </div>
             </header>
 
