--- a/app/Resources/views/default/activation.html.twig
+++ b/app/Resources/views/default/activation.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
 
-    <h1>Votre compte est activer !
+    <h1 align="center">Votre compte est activer !
         vous allez etre redirigée dans 3 seconde ...</h1>
 
 
@@ -21,4 +21,7 @@
         setTimeout(redirect, 3000)
     </script>
 
+{% endblock %}
+
+{% block footer %}
 {% endblock %}
