--- a/app/Resources/views/default/registration.html.twig
+++ b/app/Resources/views/default/registration.html.twig
@@ -17,9 +17,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h1>Inscription</h1>
+                <h1 align="center">Inscription</h1>
 
-                <div class="box">
+                <div  class="box">
                     {{ form_start(form) }}
                     {{ form_row(form.username, {'label': 'Nom d\'utilisateur', 'attr':
                         {'placeholder': 'Nom d\'utilisateur...'}}) }}
@@ -43,4 +43,6 @@
         </div>
     </div>
 
+{% endblock %}
+{% block footer %}
 {% endblock %}
