Change font of logo / page. delete userrepository Add functionnalTest.php

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -56,7 +56,7 @@
                 <div class="col-md-3 col-xs-5 col-sm-4 header-logo">
                     <br>
                     <a href="{{ path('index') }}">
-                        <h1 class="logo">Snowtricks <span class="logo-head"></span></h1>
+                        <h1 class="snowslogan">SNOWTRICKS <span class="logo-head"></span></h1>
                     </a>
                 </div>
                 <div class="col-md-8 col-md-offset-1 col-xs-7">
