--- a/app/Resources/views/default/edit.html.twig
+++ b/app/Resources/views/default/edit.html.twig
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 align="center">Modification d'un Tricks</h1>
+                    <h1 align="center" class="snow">MODIFICATION D'UN TRICKS</h1>
 
                     <div class="box">
                         {{ form_start(form) }}
