--- a/app/Resources/views/default/new.html.twig
+++ b/app/Resources/views/default/new.html.twig
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h1 align="center">Ajout d'un Tricks</h1>
+                    <h1 align="center" class="snow">AJOUT D'UN TRICKS</h1>
 
                     {% if app.user %}
 
