--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -4,7 +4,7 @@
             <div class="col-md-3 col-xs-5 col-sm-4 header-logo">
                 <br>
                 <a href="{{ path('index') }}">
-                    <h1 class="logo">Snowtricks<span class="logo-head"></span></h1>
+                    <h1 class="snowslogan">SNOWTRICKS<span class="logo-head"></span></h1>
                 </a>
             </div>
 
@@ -31,9 +31,6 @@
                                         <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> Connexion</a>
                                     </li>
                                 {% else %}
-                                    <li>
-                                        <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte {{ app.user.username }}</a>
-                                    </li>
                                     <li class="nav-item">
                                         <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i> Déconnexion</a>
                                     </li>
