--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,7 +42,6 @@
         <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> </a>
     </li>
     {% else %}
-        <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i></a>
         <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i></a>
         </li>
 
@@ -57,7 +56,7 @@
                 <div class="col-md-3 col-xs-5 col-sm-4 header-logo">
                     <br>
                     <a href="{{ path('index') }}">
-                        <h1 class="logo">Snowtricks <span class="logo-head"></span></h1>
+                        <h1 class="snowslogan">SNOWTRICKS <span class="logo-head"></span></h1>
                     </a>
                 </div>
                 <div class="col-md-8 col-md-offset-1 col-xs-7">
@@ -84,9 +83,6 @@
                                             <a href="{{ path('security_login') }}"><i class="fa fa-sign-in"></i> Connexion</a>
                                         </li>
                                     {% else %}
-                                        <li>
-                                            <a href="{{ path('compteuser') }}"><i class="fa fa-gear"></i> mon compte {{ app.user.username }}</a>
-                                        </li>
                                         <li class="nav-item">
                                             <a href="{{ path('security_logout') }}"><i class="fa fa-sign-out"></i> Déconnexion</a>
                                         </li>
