--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -43,7 +43,7 @@
                      data-base-url="{{ path('index') }}" data-csrf="{{ csrf_token('delete-item') }}">
                 </div>
                 <div class="text-center">
-                    <button id="more" type="button" class="btn btn-suc btn-lg ">Voir plus <i id="load" class="fas fa-spinner fa-spin"></i>
+                    <button id="more" type="button" class="btn btn-primary btn-lg ">Voir plus <i id="load" class="fas fa-spinner fa-spin"></i>
                     </button>
                 </div>
             </section>
