Fix email path and spelling

--- a/app/Resources/views/default/activation.html.twig
+++ b/app/Resources/views/default/activation.html.twig
@@ -6,8 +6,8 @@
 
 {% block body %}
 
-    <h1 align="center">Votre compte est activer !
-        vous allez etre redirigée dans 3 seconde ...</h1>
+    <h1 align="center">Votre compte est activé !
+        vous allez être redirigé dans 3 secondes ...</h1>
 
 
 {% endblock %}
