--- a/app/Resources/views/emails/reset_password.html.twig
+++ b/app/Resources/views/emails/reset_password.html.twig
@@ -234,7 +234,7 @@
                                                                             stroke="f" fillcolor="#008000">
                                                                         <w:anchorlock/>
                                                                         <center>
-                                                                            <a href="http://127.0.0.1/SnowTricks/web/app_dev.php/reset_password/{{ user.token }}"
+                                                                            <a href="{{ url('reset_password', {'token': user.token}) }}"
                                                                                style="background-color:#008000;color:#ffffff;display:inline-block;font-family:sans-serif;font-size:18px;line-height:40px;text-align:center;text-decoration:none;width:200px;-webkit-text-size-adjust:none;">Réinitialiser </a>
                                                                             <!--[if mso]>
                                                                             </center>
