--- a/templates/views/default/registration.html.twig
+++ b/templates/views/default/registration.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'views/base.html.twig' %}
 
 {% block header %}
-    {% include 'includes/header.html.twig' %}
+    {% include 'views/includes/header.html.twig' %}
 {% endblock %}
 
 
