--- a/templates/views/default/edit.html.twig
+++ b/templates/views/default/edit.html.twig
@@ -1,47 +1,41 @@
-{% extends 'base.html.twig' %}
+{% extends 'views/base.html.twig' %}
 
 {% block header %}
-    {% include 'includes/header.html.twig' %}
+    {% include 'views/includes/header.html.twig' %}
 {% endblock %}
 
-
 {% block body %}
+
     <div class="content-block">
 
 
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <h1 align="center" class="snow">AJOUT D'UN TRICKS</h1>
-
-                    {% if app.user %}
+                <div class="col-md-8 col-md-offset-2">
+                    <h1 align="center" class="snow">MODIFICATION D'UN TRICKS</h1>
 
                     <div class="box">
                         {{ form_start(form) }}
                         {{ form_row(form.title, {'attr': {'placeholder': "Titre du  tricks"}}) }}
-                        <hr>
-                        {{ form_row(form.videos, {'attr': {'placeholder': "Lien Youtube ou Dailymotion du tricks"}}) }}
-                        <hr>
                         {{ form_row(form.category) }}
                         {{ form_row(form.content, {'attr': {'placeholder': "Description du tricks"}}) }}
                         <hr>
-                        {{ form_row(form.images) }}
+                        <label>Images</label>
+                        {{ form_widget(form.images) }}
+                        <hr>
+                        <label>Videos</label>
+                        {{ form_widget(form.videos, {'attr': {'placeholder': "Lien Youtube du tricks"}}) }}
                         <hr>
 
-                        <button type="submit" class="btn btn-success center-block"> Ajouter le tricks</button>
+                        <button type="submit" class="btn btn-success center-block"> Modifiez le tricks</button>
                         {{ form_end(form) }}
-                        {% else %}
-                        <p> vous devez vous connecter pour ajouter une figure ... d'ailleurs, comment êtes-vous arriver ici?</p>
-                        {% endif %}
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
 {% endblock %}
-
 
 {% block javascripts %}
     {{ parent() }}
