--- a/templates/views/default/login.html.twig
+++ b/templates/views/default/login.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'views/base.html.twig' %}
 {% block stylesheets %}
     {{ parent() }}
 {% endblock %}
 {% block header %}
-    {% include 'includes/header.html.twig' %}
+    {% include 'views/includes/header.html.twig' %}
 {% endblock %}
 {% block body %}
     <!DOCTYPE html>
