--- a/templates/views/default/reset_password.html.twig
+++ b/templates/views/default/reset_password.html.twig
@@ -1,7 +1,7 @@
-{% extends 'base.html.twig' %}
+{% extends 'views/base.html.twig' %}
 
 {% block header %}
-    {% include 'includes/header.html.twig' %}
+    {% include 'views/includes/header.html.twig' %}
 {% endblock %}
 
 
@@ -17,14 +17,13 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h1>Réinitialiser votre mot de passe</h1>
-                <p>
-                    vous recevrez un email après validation de ce formulaire.
-                </p>
 
                 <div class="box">
                     {{ form_start(form) }}
-                    {{ form_row(form.email, {'label': 'Adresse email liée à votre compte', 'attr':
-                        {'placeholder': 'Adresse email'}}) }}
+                    {{ form_row(form.password, {'label': 'Nouveau mot de passe', 'attr':
+                        {'placeholder': 'Entrer votre nouveau mot de passe'}}) }}
+                    {{ form_row(form.confirm_password, {'label': 'Confirmer votre mot de passe', 'attr':
+                        {'placeholder': 'Confirmer votre nouveau mot de passe'}}) }}
                     <center>
                         <button type="submit" class="btn btn-success"> Valider</button>
                     </center>
@@ -38,6 +37,7 @@
     </div>
 
 {% endblock %}
+
 
 {% block footer %}
 {% endblock %}
